@@ -12,6 +12,7 @@ Overview of changes in lightdm 1.1.1
     * AppArmor profile: Fix broken gnome-keyring and dbus/gwibber, and quiesce
       annoying kernel audit messages for privileges that we definitively do not
       want to grant.
+    * Set LOGNAME environment variable
 
 Overview of changes in lightdm 1.1.0
 
